--- a/package.json
+++ b/package.json
@@ -15,8 +15,11 @@
     "cesium": "^1.68.0",
     "element-ui": "^2.13.1",
     "js-yaml": "^3.13.1",
+    "mem": "^6.1.0",
+    "serialize-javascript": "^2.1.1",
     "vue": "^2.6.11",
-    "vue-router": "^3.1.6"
+    "vue-router": "^3.1.6",
+    "webpack-cli": "^3.3.11"
   },
   "devDependencies": {
     "autoprefixer": "^9.7.6",
